--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "feather": "^0.0.5",
     "vite": "^5.1.2"
   },
   "devDependencies": {
